--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -5,6 +5,7 @@ on:
 jobs:
     publish:
         runs-on: ubuntu-latest
+        environment: Publish
         steps:
             -   uses: actions/checkout@v2
 
