--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
         <repository>
             <id>ossrh</id>
             <name>Central Repository OSSRH</name>
-            <url>https://oss.sonatype.org/content/repositories/releases/</url>
+            <url>https://oss.sonatype.org/service/local/</url>
         </repository>
     </distributionManagement>
 
