--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -24,8 +24,9 @@ jobs:
                     gpg-passphrase:  ${{ secrets.GPG_PASSPHRASE }}
 
             -   name: Publish package
-                run: mvn --batch-mode deploy
+                run: mvn -P  --batch-mode deploy
                 env:
                     MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
                     MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
                     MAVEN_GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+                    PERFORM_RELEASE: true
