--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
             <id>release-sign-artifacts</id>
             <activation>
                 <property>
-                    <name>performRelease</name>
+                    <name>env.performRelease</name>
                     <value>true</value>
                 </property>
             </activation>
