--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -28,5 +28,5 @@ jobs:
                 env:
                     MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
                     MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
-                    MAVEN_GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+                    MAVEN_GPG_PASSPHRASE: "secrets.MAVEN_GPG_PASSPHRASE"
                     PERFORM_RELEASE: true
