--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -21,12 +21,12 @@ jobs:
                     server-username: MAVEN_USERNAME
                     server-password: MAVEN_PASSWORD
                     gpg-private-key: ${{ secrets.GPG_SIGNING_KEY }}
-                    gpg-passphrase:  "MAVEN_GPG_PASSPHRASE"
+                    gpg-passphrase:  MAVEN_GPG_PASSPHRASE
 
             -   name: Publish package
                 run: mvn --batch-mode deploy
                 env:
                     MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
                     MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
-                    MAVEN_GPG_PASSPHRASE: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
+                    MAVEN_GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
                     PERFORM_RELEASE: true
