--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -30,3 +30,4 @@ jobs:
                     MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
                     MAVEN_GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
                     PERFORM_RELEASE: true
+                    GPG_TTY: $(tty)
