--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,7 +8,7 @@ on:
 jobs:
     build:
         runs-on: ubuntu-latest
-
+        environment: SonarCloud
         steps:
             -   uses: actions/checkout@v2
                 with:
